--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-kactivities-kf5 (5.6.0-1~) UNRELEASED; urgency=medium
+kactivities-kf5 (5.6.0-1) experimental; urgency=medium
 
   * Prepare initial Debian release.
   * Update build dependencies to build against experimental and to
@@ -9,7 +9,7 @@ kactivities-kf5 (5.6.0-1~) UNRELEASED; urgency=medium
   * Update watch file.
   * Add basic autopkgtests support.
 
- -- Maximiliano Curia <maxy@debian.org>  Mon, 26 Jan 2015 15:23:45 +0100
+ -- Maximiliano Curia <maxy@debian.org>  Tue, 03 Feb 2015 18:04:39 +0100
 
 kactivities-kf5 (5.6.0-0ubuntu1) vivid; urgency=medium
 
