--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kactivities-kf5 (5.9.0-0ubuntu1) UNRELEASED; urgency=medium
+
+  * New upstream release
+
+ -- Scarlett Clark <sgclark@kubuntu.org>  Fri, 10 Apr 2015 10:45:49 -0700
+
 kactivities-kf5 (5.8.0-0ubuntu1) vivid; urgency=medium
 
   * New upstream release
