--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kactivities-kf5 (5.10.0-1~) UNRELEASED; urgency=medium
+
+  * New upstream release (5.10.0).
+
+ -- Maximiliano Curia <maxy@debian.org>  Mon, 11 May 2015 13:05:42 +0200
+
 kactivities-kf5 (5.9.0-1) experimental; urgency=medium
 
   * New upstream release (5.9.0).
