--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kactivities-kf5 (5.11.0-2~) UNRELEASED; urgency=medium
+
+  * 
+
+ -- Maximiliano Curia <maxy@debian.org>  Tue, 07 Jul 2015 13:29:43 +0200
+
 kactivities-kf5 (5.11.0-1) unstable; urgency=medium
 
   * New upstream release (5.10.0).
