--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
-kactivities-kf5 (5.11.0-2~) UNRELEASED; urgency=medium
+kactivities-kf5 (5.12.0-1~) UNRELEASED; urgency=medium
 
   * Update symbols files.
+  * New upstream release (5.12.0).
 
- -- Maximiliano Curia <maxy@debian.org>  Tue, 07 Jul 2015 13:29:43 +0200
+ -- Maximiliano Curia <maxy@debian.org>  Tue, 07 Jul 2015 17:42:27 +0200
 
 kactivities-kf5 (5.11.0-1) unstable; urgency=medium
 
