--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-kactivities-kf5 (5.11.0-0ubuntu1) UNRELEASED; urgency=medium
+kactivities-kf5 (5.12.0-0ubuntu1) UNRELEASED; urgency=medium
 
-  * Vivid backport
+  * New upstream release.
 
- -- Scarlett Clark <sgclark@kubuntu.org>  Wed, 08 Jul 2015 08:02:58 -0700
+ -- Scarlett Clark <sgclark@kubuntu.org>  Mon, 13 Jul 2015 00:36:19 -0700
 
 kactivities-kf5 (5.11.0-1) unstable; urgency=medium
 
