--- a/debian/changelog
+++ b/debian/changelog
@@ -1,12 +1,8 @@
 kactivities-kf5 (5.12.0-0ubuntu1) UNRELEASED; urgency=medium
 
-  [ Scarlett Clark ]
   * New upstream release.
 
-  [ Jonathan Riddell ]
-  * new upstream release
-
- -- Jonathan Riddell <jriddell@ubuntu.com>  Tue, 14 Jul 2015 22:53:50 +0200
+ -- Scarlett Clark <sgclark@kubuntu.org>  Mon, 13 Jul 2015 00:36:19 -0700
 
 kactivities-kf5 (5.11.0-1) unstable; urgency=medium
 
