--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,11 @@
 kactivities-kf5 (5.12.0-0ubuntu1) UNRELEASED; urgency=medium
 
+  [ Scarlett Clark ]
   * New upstream release.
+
+  [ José Manuel Santamaría Lema ]
+  * Update symbols file: mark as optional the symbols gone after
+    building with GCC 5
 
  -- Scarlett Clark <sgclark@kubuntu.org>  Mon, 13 Jul 2015 00:36:19 -0700
 
