--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,7 @@
+kactivities-kf5 (5.12.0-2) UNRELEASED; urgency=medium
+
+ -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Mon, 27 Jul 2015 22:55:18 -0300
+
 kactivities-kf5 (5.12.0-1) unstable; urgency=medium
 
   * Update symbols files. (Closes: #791865)
