--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,9 @@
 kactivities-kf5 (5.12.0-2) UNRELEASED; urgency=medium
 
+  [ Lisandro Damián Nicanor Pérez Meyer ]
+  * Make kactivities depend upon libqt5sql5-sqlite, as it's a harcoded
+    requirement (Closes: #793826).
+
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Mon, 27 Jul 2015 22:55:18 -0300
 
 kactivities-kf5 (5.12.0-1) unstable; urgency=medium
