--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-kactivities-kf5 (5.12.0-0ubuntu1) UNRELEASED; urgency=medium
+kactivities-kf5 (5.12.0-0ubuntu1) wily; urgency=medium
 
   [ Scarlett Clark ]
   * New upstream release.
@@ -7,7 +7,7 @@ kactivities-kf5 (5.12.0-0ubuntu1) UNRELEASED; urgency=medium
   * Update symbols file: mark as optional the symbols gone after
     building with GCC 5
 
- -- Scarlett Clark <sgclark@kubuntu.org>  Mon, 13 Jul 2015 00:36:19 -0700
+ -- Scarlett Clark <sgclark@kubuntu.org>  Mon, 03 Aug 2015 14:23:24 +0200
 
 kactivities-kf5 (5.11.0-1) unstable; urgency=medium
 
