--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kactivities-kf5 (5.13.0-1~) UNRELEASED; urgency=medium
+
+  * New upstream release (5.13.0).
+
+ -- Maximiliano Curia <maxy@debian.org>  Tue, 01 Sep 2015 20:23:43 +0200
+
 kactivities-kf5 (5.12.0-2) unstable; urgency=high
 
   [ Lisandro Damián Nicanor Pérez Meyer ]
