--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-kactivities-kf5 (5.14.0-1~1) UNRELEASED; urgency=medium
+kactivities-kf5 (5.14.0-1) unstable; urgency=medium
 
   * New upstream release (5.14.0).
   * Update install files.
 
- -- Maximiliano Curia <maxy@debian.org>  Mon, 14 Sep 2015 23:36:44 +0200
+ -- Maximiliano Curia <maxy@debian.org>  Tue, 15 Sep 2015 13:50:06 +0200
 
 kactivities-kf5 (5.13.0-1) unstable; urgency=medium
 
