--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+kactivities-kf5 (5.15.0-0ubuntu2) UNRELEASED; urgency=medium
+
+  * Vivid backport. 
+
+ -- Scarlett Clark <sgclark@kubuntu.org>  Thu, 08 Oct 2015 20:25:32 -0700
+
 kactivities-kf5 (5.15.0-0ubuntu1) wily; urgency=medium
 
   [ Scarlett Clark ]
