--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 kactivities-kf5 (5.15.0-0ubuntu2) UNRELEASED; urgency=medium
 
   * Vivid backport. 
+  * Add missing files. 
 
  -- Scarlett Clark <sgclark@kubuntu.org>  Thu, 08 Oct 2015 20:25:32 -0700
 
