--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-kactivities-kf5 (5.16.0-1~) UNRELEASED; urgency=medium
+kactivities-kf5 (5.16.0-1) unstable; urgency=medium
 
   * New upstream release (5.16.0).
   * Add the new settings files.
   * Update symbols files.
 
- -- Maximiliano Curia <maxy@debian.org>  Tue, 17 Nov 2015 11:49:28 +0100
+ -- Maximiliano Curia <maxy@debian.org>  Mon, 30 Nov 2015 12:13:00 +0100
 
 kactivities-kf5 (5.15.0-1) unstable; urgency=medium
 
