--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,8 @@ kactivities-kf5 (5.18.0-0ubuntu1) UNRELEASED; urgency=medium
 
   [ Philip Muškovac ]
   * New upstream release
+  * Override the libkactivitymanager_plugin lintian warnings, the lib is only
+    used internally
 
  -- Philip Muškovac <yofel@kubuntu.org>  Wed, 06 Jan 2016 14:55:02 +0100
 
