--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ kactivities-kf5 (5.19.0-1ubuntu1) UNRELEASED; urgency=medium
 
   * Merged with Debian
   * New upstream release
+  * Fixing problem in control caused by merge
 
  -- Clive Johnston <clivejo@aol.com>  Thu, 25 Feb 2016 22:40:03 +0000
 
