--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,9 @@ kactivities-kf5 (5.19.0-1ubuntu1) UNRELEASED; urgency=medium
   * Merged with Debian
   * New upstream release
   * Fixing problem in control caused by merge
+  * Removing kactivities packages and files in it,
+    as upstream has split into new repositories
+  * Depend on new package kactivitymanagerd
 
  -- Clive Johnston <clivejo@aol.com>  Thu, 25 Feb 2016 22:40:03 +0000
 
