--- a/debian/changelog
+++ b/debian/changelog
@@ -12,6 +12,7 @@ kactivities-kf5 (5.19.0-1ubuntu1) UNRELEASED; urgency=medium
   [ Scarlett Clark ]
   * Rename qml install file to match package name so 
     files actually get installed.
+  * git add the file.... 
 
  -- Clive Johnston <clivejo@aol.com>  Thu, 25 Feb 2016 22:40:03 +0000
 
