--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
-kactivities-kf5 (5.20.0-0ubuntu1) UNRELEASED; urgency=medium
+kactivities-kf5 (5.21.0-0ubuntu1) UNRELEASED; urgency=medium
 
   * New upstream release, xenial backport.
+  * Bump to latest. 
 
  -- Scarlett Clark <sgclark@kubuntu.org>  Mon, 25 Apr 2016 13:05:38 -0700
 
