--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,10 @@ kactivities-kf5 (5.21.0-0ubuntu1) UNRELEASED; urgency=medium
 
   * New upstream release, xenial backport.
   * Bump to latest. 
+  * Make kactivitymanagerd a recommend rather than a hard
+    depend seeing as it is in the Plasma release cycle, this 
+    will allow for kactivities to build with the frameworks
+    cycle. 
 
  -- Scarlett Clark <sgclark@kubuntu.org>  Mon, 25 Apr 2016 13:05:38 -0700
 
