--- a/debian/changelog
+++ b/debian/changelog
@@ -1,35 +1,21 @@
-kactivities-kf5 (5.22.0-1~1.gbp7fa9f6) UNRELEASED; urgency=medium
-
-  ** SNAPSHOT build @7fa9f611768b39fb7f8466191426cb2f5196abf6 **
+kactivities-kf5 (5.22.0-1) unstable; urgency=medium
 
   [ Maximiliano Curia ]
   * Replace the "Historical name" ddeb-migration by its "Modern, clearer" replacement dbgsym-migration.
   * Add upstream metadata (DEP-12)
   * debian/control: Update Vcs-Browser and Vcs-Git fields
-  * debian/control: Update Vcs-Browser and Vcs-Git fields
   * Drop qt5-qmltooling-plugins build dependency
+  * Update acc test script
+  * Drop removed files.
+  * uscan no longer supports more than one main upstream tarball being listed
 
   [ Automatic packaging ]
   * Update build-deps and deps with the info from cmake
   * Bump Standards-Version to 3.9.8
   * Update symbols files.
-  * Update build-deps and deps with the info from cmake
-
-  [ Maximiliano Curia ]
-  * Update acc test script
-  * UNRELEASED
-  * Drop removed files.
-
-  [ Automatic packaging ]
   * Drop the kactivities package, moved to plasma.
 
-  [ Maximiliano Curia ]
-  * uscan no longer supports more than one main upstream tarball being listed
-
-  [ Automatic packaging ]
-  * Update build-deps and deps with the info from cmake
-
- -- Automatic packaging <maxy+jenkins@gnuservers.com.ar>  Sun, 15 May 2016 13:05:10 +0200
+ -- Maximiliano Curia <maxy@debian.org>  Thu, 26 May 2016 10:52:55 +0200
 
 kactivities-kf5 (5.19.0-1) experimental; urgency=medium
 
