--- a/debian/changelog
+++ b/debian/changelog
@@ -1,18 +1,12 @@
-kactivities-kf5 (5.25.0-1~3.gbp53c8bc) UNRELEASED; urgency=medium
-
-  ** SNAPSHOT build @53c8bc9829d0c6eeae9c32de2ed6d1828cb5ac46 **
+kactivities-kf5 (5.25.0-1) unstable; urgency=medium
 
   [ Automatic packaging ]
-  ** SNAPSHOT build @363aa0d7b5a50bb1e118f6604dc777eb58c60d73 **
-
   * Update symbols files from buildds logs (5.23.0-1).
-  * Update build-deps and deps with the info from cmake
   * Update build-deps and deps with the info from cmake
 
   [ Maximiliano Curia ]
   * Update symbols files.
   * Bump the breaks/replaces version for the renamed module
-  * Update symbols files.
   * Bump group breaks (5.25)
 
   [ Harald Sitter ]
@@ -22,7 +16,7 @@ kactivities-kf5 (5.25.0-1~3.gbp53c8bc) UNRELEASED; urgency=medium
   [ Jonathan Riddell ]
   * add kactivities-bin
 
- -- Maximiliano Curia <maxy@gnuservers.com.ar>  Wed, 17 Aug 2016 22:05:24 +0200
+ -- Maximiliano Curia <maxy@debian.org>  Sat, 20 Aug 2016 16:50:12 +0200
 
 kactivities-kf5 (5.23.0-1) unstable; urgency=medium
 
