--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,16 @@
-kactivities-kf5 (5.41.0-1~) UNRELEASED; urgency=medium
+kactivities-kf5 (5.41.0-1) experimental; urgency=medium
 
   * New upstream release (5.38.0).
   * Update build-deps and deps with the info from cmake
   * New upstream release (5.41.0).
+  * Bump Standards-Version to 4.1.2.
+  * Update build-deps and deps with the info from cmake
+  * Drop qml-module-org-kde-extensionplugin transitional package.
+    Thanks to Holger Levsen for checking and reporting (Closes: 873933)
+  * Bump group breaks (5.41)
+  * Release to experimental
 
- -- Maximiliano Curia <maxy@debian.org>  Thu, 14 Dec 2017 12:22:47 -0300
+ -- Maximiliano Curia <maxy@debian.org>  Fri, 15 Dec 2017 10:42:01 -0300
 
 kactivities-kf5 (5.37.0-2) sid; urgency=medium
 
