--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
-kactivities-kf5 (5.42.0-2~) UNRELEASED; urgency=medium
+kactivities-kf5 (5.42.0-2) sid; urgency=medium
 
   * New revision
+  * Release to sid
 
- -- Maximiliano Curia <maxy@debian.org>  Sat, 10 Feb 2018 11:22:51 +0100
+ -- Maximiliano Curia <maxy@debian.org>  Sat, 10 Feb 2018 11:28:27 +0100
 
 kactivities-kf5 (5.42.0-1) experimental; urgency=medium
 
